css: fix broken CSS style

--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,7 @@ scrollbar.overlay-indicator.vertical range.vertical trough slider {
 }
 
 vte-terminal.padded {
-  margin-bottom: 0 0 1px 0;
+  margin: 0 0 1px 0;
   padding: 7px 6px 3px 6px;
 }
 
